--- a/MVP.html
+++ b/MVP.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AD Store</title>
+    <title>Sam & Co.</title>
     <link rel="stylesheet" href="MVP.css">
 </head>
 <body>
@@ -21,16 +21,17 @@
 
     <main>
         <div class="kolom">
-            <img src="Sewa Pesawat Jet.png">
+            <img src="Sewa Pesawat Jet.png" alt="Sewa Pesawat Jet">
             <h2>Sam & Co.</h2>
-            <p>Selamat datang di Sam & Co., penyedia penyewaan jet pribadi eksklusif. Nikmati perjalanan tanpa batas dengan armada jet modern kami. Fleksibilitas jadwal, keamanan tinggi, dan layanan berkualitas adalah prioritas kami. Percayakan perjalanan pribadi Anda kepada Sam & Co.Untuk pengalaman perjalanan yang tak terlupakan dan kenyamanan maksimal.</p>
-        
+            <p>Selamat datang di Sam & Co, Penyedia penyewaan jet pribadi eksklusif. Nikmati perjalanan tanpa batas dengan armada jet modern kami. Fleksibilitas jadwal, keamanan tinggi, dan layanan berkualitas adalah prioritas kami. Percayakan perjalanan pribadi Anda kepada Sam & Co.Untuk pengalaman perjalanan yang tak terlupakan dan kenyamanan maksimal.</p>
+        </div>
+
         <div class="kolom">
             <form>
                 <label for="Username">Username: </label>
-                <input type="Username" id="" name="">
+                <input type="text" id="Username" name="Username">
                 <label for="email">Email: </label>
-                <input type="email" id="" name="">
+                <input type="email" id="email" name="email">
                 <button type="submit">Sign In</button>
             </form>
         </div>
@@ -39,9 +40,9 @@
     <footer style="background-color: #d0d8f1;">
         <p>&copy; 2024 Sam & Co. All rights reserved.</p>
         <div class="social-icons">
-            <a href="#" target="_blank"><img src="facebook.png"></a>
-            <a href="#" target="_blank"><img src="twitter.png"></a>
-            <a href="#" target="_blank"><img src="instagram.png"></a>
+            <a href="#" target="_blank"><img src="facebook.png" alt="Facebook"></a>
+            <a href="#" target="_blank"><img src="twitter.png" alt="Twitter"></a>
+            <a href="#" target="_blank"><img src="instagram.png" alt="Instagram"></a>
         </div>
     </footer>
 </body>
