--- a/MVP.html
+++ b/MVP.html
@@ -23,7 +23,7 @@
         <div class="kolom">
             <img src="Sewa Pesawat Jet.png" alt="Sewa Pesawat Jet">
             <h2>Sam & Co.</h2>
-            <p>Selamat datang di Sam & Co, Penyedia penyewaan jet pribadi eksklusif. Nikmati perjalanan tanpa batas dengan armada jet modern kami. Fleksibilitas jadwal, keamanan tinggi, dan layanan berkualitas adalah prioritas kami. Percayakan perjalanan pribadi Anda kepada Sam & Co.Untuk pengalaman perjalanan yang tak terlupakan dan kenyamanan maksimal.</p>
+            <p class="justify-text"> Selamat datang di Sam & Co, Penyedia penyewaan jet pribadi eksklusif. Nikmati perjalanan tanpa batas dengan armada jet modern kami. Fleksibilitas jadwal,keamanan tinggi,dan layanan berkualitas adalah prioritas kami. Percayakan perjalanan pribadi Anda kepada Sam & Co.</p>
         </div>
 
         <div class="kolom">
