--- a/MVP.html
+++ b/MVP.html
@@ -4,18 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sam & Co.</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/brands.min.css">
     <link rel="stylesheet" href="MVP.css">
 </head>
 <body>
     <header>
         <img src="Company Logo.png" alt="Sam & Co.">
+        <div class="icons">
+            <a href="#" class="icon-link"><i class="fas fa-search"></i></a>
+            <a href="#" class="icon-link"><i class="fas fa-user"></i></a>
+        </div>
     </header>
 
     <nav>
         <ul>
-            <li><a href="#">Profil</a></li>
-            <li><a href="#">Kontak</a></li>
-            <li><a href="#">Harga</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Fleet</a></li>
+            <li><a href="#">Jet Charter</a></li>
+            <li><a href="#">Trip Planning</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">About Us</a></li>
+            </div>
         </ul>
     </nav>
 
@@ -38,6 +48,8 @@
     </main>
 
     <footer style="background-color: #d0d8f1;">
+        <div class="contact-info">
+            <div class="email">Email : samandcoplane.com</div>
         <p>&copy; 2024 Sam & Co. All rights reserved.</p>
         <div class="social-icons">
             <a href="#" target="_blank"><img src="facebook.png" alt="Facebook"></a>
